# FDf

./: ._elem-col.fdf  ._elem-fract.fdf  ._elem.fdf  ._elem2.fdf  ._julia.fdf  ._mars.fdf  ._minilibx_macos  ._t1.fdf  ._t2.fdf  CMakeLists.txt  a.out  author  draw_map.c  fdf.c  fdf.h  file_mini  get_next_line.c  main.c  or_file.c  trans.c
libft/: ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_memalloc.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memdel.c  ._ft_putchar.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putendl_fd.c  ._ft_putnbr.c  ._ft_putnbr_fd.c  ._ft_putstr.c  ._ft_putstr_fd.c  ._ft_strcat.c  ._ft_strchr.c  ._ft_strclr.c  ._ft_strcpy.c  ._ft_strdel.c  ._ft_strdup.c  ._ft_strequ.c  ._ft_striter.c  ._ft_striteri.c  ._ft_strjoin.c  ._ft_strlen.c  ._ft_strmap.c  ._ft_strmapi.c  ._ft_strncpy.c  ._ft_strnequ.c  ._ft_strnew.c  ._ft_strnstr.c  ._ft_strsplit.c  (+3 more)
minilibx_macos/: .#font.  ._Makefile  .__README_  ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_new_window.h  ._mlx_new_window.m  ._mlx_rgb.c  ._mlx_shaders.c  ._mlx_xpm.c
minilibx_macos/man/: ._man3
minilibx_macos/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
